--- a/css/styles.css
+++ b/css/styles.css
@@ -161,21 +161,65 @@ p {
     color: #007bff;
 }
 
-.about {
-    padding: 100px 0;
-    text-align: center;
-    background-color: #ede4d6;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-.about h2 {
-    font-size: 30px;
+.about {
+    padding: 50px;
+    background-color: #f7f7f7;
+}
+
+h2, h3, h4, h5 {
+    text-align: center;
+    font-size: 1.8rem;
     margin-bottom: 20px;
 }
 
-.about p {
-    font-size: 18px;
-    max-width: 800px;
-    margin: 0 auto;
+.story p {
+    font-size: 1rem;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+.meet-the-team {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.team-member {
+    text-align: center;
+    margin: 20px;
+}
+
+.team-member img {
+    max-width: 150px;
+    border-radius: 50%;
+}
+
+.team-member h3 {
+    font-size: 1.2rem;
+    margin: 10px 0;
+}
+
+.team-member p {
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+
+.mission {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.mission p {
+    font-size: 1rem;
+    text-align: justify;
 }
 
 .contact {
